myteo/test/parser/ast/function_declaration/missing_body_error.exp
ERROR: test/parser/ast/function_declaration/missing_body_error.myte:1:10 Unexpected token "1", expected start of function body
 1 | fun foo() 1
   |           ^